--- a/web/app/themes/made/fbmods/sass/components/_hover-cards.scss
+++ b/web/app/themes/made/fbmods/sass/components/_hover-cards.scss
@@ -113,7 +113,9 @@
 
 .hover-card-area {
   @include clearfix();
-  margin: 0 -10px 30px;  
+  @include media-md{
+    margin: 0 -10px 30px;  
+  }
 }
 
 
