--- a/web/app/themes/made/fbmods/sass/components/_nav.scss
+++ b/web/app/themes/made/fbmods/sass/components/_nav.scss
@@ -113,6 +113,8 @@
 
   .site-header {
     position: fixed;
+    top: 0 !important;
+    bottom: inherit;
   }
 
   .front-page .site-inner, .site-inner { //Specificity
