--- a/web/app/themes/made/fbmods/sass/helpers/_mixins.scss
+++ b/web/app/themes/made/fbmods/sass/helpers/_mixins.scss
@@ -104,7 +104,7 @@
     width: 210px;
     height: 20px;
     display: block;
-    margin: 0 auto;
+    margin: 30px auto 20px;
     background-size: 210px 9px;
     background-repeat: no-repeat;
     background-image: url(/app/themes/made/fbmods/images/hr.png);
